--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ serde = { version = "1.0", features = ["derive"] } # Untuk serialisasi/deseriali
 serde_json = "1.0" # Contoh untuk format JSON
 dotenvy = "0.15"
 tokio = { version = "1", features = ["full"] }
-tower = "0.5"
+tower-http = { version = "0.5", features = ["cors"] }
 axum = { version = "0.7", features = ["multipart"] }
 sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
 chrono = { version = "0.4", features = ["serde", "clock"] }
