--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ pdfium-render = "0.8"
 reqwest = { version = "0.12", features = ["json"] }
 rdkafka = { version = "0.36", features = ["tokio", "cmake-build"] }
 futures = "0.3"
+tokio-stream = "0.1"
